@@ -436,6 +436,7 @@
     * 3847 Painter options can now be reset to defaults...
     * 3856 Improved handling of Check_MK GUI request timeouts...
     * 3876 New filter option: negation for several service and host groups
+    * 3891 Changed graph time range choices...
     * 3059 FIX: Fixed highlighting of availability timeline time slices
     * 3175 FIX: Fix timeranges of graphs that are embedded in a dashboard...
     * 3076 FIX: fixed broken views in check_mk raw edition
